--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World My name is Roy</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hi Bhuut</h1>
+
 </body>
 </html>
