--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>This is the Main Heading</h1>
-<p>This text might be an introduction to the rest of
-the page. And if the page is a long one it might
-be split up into several sub-headings.<p>
-<h2>This is a Sub-Heading</h2>
-<p>Many long articles have sub-headings so to help
-you follow the structure of what is being written.
-There may even be sub-sub-headings (or lower-level
-headings).</p>
-<h2>Another Sub-Heading</h2>
-<p>Here you can see another sub-heading.</p>
-</body>
-</html>
+  <h1>My Name is?</h1>
+  <p> Roy Mustang.</P>
+    <h2>What Kind of Alchemy do I use?</h2>
+    <p>Flame Alchemy</p>
+    <h3>What is my name as a state alchemist?</h3>
+    <p>The Flame Alchemist</P>
+    </body>
+    </html>
