--- a/index.html
+++ b/index.html
@@ -1,11 +1,54 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>RoyMustang</title>
+</head>
 <body>
   <h1>My Name is?</h1>
-  <p> Roy Mustang.</P>
+  <p> <b>Roy</b> <i>Mustang</i>.</P>
     <h2>What Kind of Alchemy do I use?</h2>
     <p>Flame Alchemy</p>
     <h3>What is my name as a state alchemist?</h3>
-    <p>The Flame Alchemist</P>
-    </body>
+    <p lang="en">The Flame Alchemist</P>
+      <h3>  Motto </h3>
+        <p> Remember Remember the 5<sup>th</sup> of november<sub>/s</sup> </p>
+          <h3>Hello</h3>
+          <p>The earth <br> Is green <hr> The End</p>
+<h1>What's my name?</h1>
+<p><strong>Beware:</strong> <i>The tea is still hot</i> </p>
+<blockquote>
+<p>Did you ever stop to think, and forget to start
+again?</p>
+<blockquote cite="roysdevnet.github.io">
+<p>My name is <q>Slim Shady</q> <br>What you gonna do?</p>
+</blockquote>
+<p> <cite>Victor Frankle</cite> Mans search for meaning </p>
+<a href="facebook.com">2</a>
+<p><abbr title="Professor">Prof</abbr> Stephen
+Hawking is a theoretical physicist and
+cosmologist.</p>
+<p> <abbr title="Roy Mustang">Roy </abbr> </p>
+<p>Victor <del>sells</del> <ins>sold</ins> the computer for <s>100</s> <br> 200 </p>
+<ol>
+  how to make a egg
+<li>Take the egg out</li>
+<ol>
+  <li>Halua</li>
+  <li>pudi</li>
+</ol>
+<li>crack the egg</li>
+<li>Fry it</li>
+</ol>
+<ul>
+  <li>this shit is not</li>
+  <li>ordered in any way imaginable</li>
+</ul>
+<dl>
+  <dt>Roy</dt>
+  <dd>The Flame Alchemist</dd>
+  <dt>RoyMustang</dt>
+  <dd>Colonel</dd>
+</dl>
+<a href="google.com">google</a>
+  </body>
     </html>
