--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>RoyMustang</title>
 </head>
 <body>
-  <h1>My Name is?</h1>
+  <h1><a href="Forms\index.html">Forms</a><br> <a href="Images/index.html">Link to death note page</a>  </h1>
+  <h1 id="name">My Name is?</h1>
   <p> <b>Roy</b> <i>Mustang</i>.</P>
     <h2>What Kind of Alchemy do I use?</h2>
     <p>Flame Alchemy</p>
@@ -16,7 +17,6 @@
           <p>The earth <br> Is green <hr> The End</p>
 <h1>What's my name?</h1>
 <p><strong>Beware:</strong> <i>The tea is still hot</i> </p>
-<blockquote>
 <p>Did you ever stop to think, and forget to start
 again?</p>
 <blockquote cite="roysdevnet.github.io">
@@ -47,8 +47,155 @@ cosmologist.</p>
   <dt>Roy</dt>
   <dd>The Flame Alchemist</dd>
   <dt>RoyMustang</dt>
-  <dd>Colonel</dd>
+  <dd><a href="#"></a>Colonel</dd>
 </dl>
-<a href="google.com">google</a>
+<a href="https://www.google.com/">google</a>
+<a href="https://www.google.com" target="_blank">google</a>
+<a href="mailto:jon@example.org">Email Jon</a>
+<a href="https://www.facebook.com/people/Walter-White/100022760811218" target="_blank">Facebook</a>
+<a href="Death note.jpg" target="_blank">Death Note</a>
+
+<html>
+<head>
+<title>Links</title>
+</head>
+<body>
+<h1 id="top">Film Folk</h1>
+<h2>Festival Diary</h2>
+<p>Here are some of the film festivals we
+will be attending this year.<br />Please
+<a href="mailto:filmfolk@example.org">
+contact us</a> if you would like more
+information.</p>
+<h3>January</h3>
+<p><a href="http://www.sundance.org">
+Sundance Film Festival</a><br />
+Park City, Utah, USA<br />
+20 - 30 January 2011</p>
+<h3>February</h3>
+<p><a href="http://www.tropfest.com">
+Tropfest</a><br />
+Sydney, Australia<br />
+20 February 2011</p>
+<!-- additional content -->
+<p><a href="about.html">About Film Folk</a></p>
+<p><a href="#top">Top of page</a></p>
+<table>
+  <tr>
+    <td>15</td>
+    <td>20</td>
+    <td>25</td>
+  </tr>
+  <tr>
+    <td>30</td>
+    <td>40</td>
+    <td>50</td>
+  </tr>
+</table>
+<table>
+  <tr>
+    <th></th>
+  <th scope="col">Guns</th>
+  <th scope="col">Roses</th>
+</tr>
+<tr>
+  <th scope="row">Total Sales:</th>
+<td> 20</td> <td>25</td>
+</tr>
+</table>
+<table>
+  <tr>
+    <th></th> <th>10 AM</th> <th>11 AM</th> <th>12 PM</th> <th>01 PM</th>
+  </tr>
+<tr>
+  <th>Monday</th> <td>Hindi</td> <td>English</td> <td>Maths</td> <td>Gym</td>
+</tr>
+<tr>
+  <th>Tuesday</th> <td colspan="3">Hindi</td> <td>gym</td>
+</tr>
+<tr>
+  <th>Wednesday</th> <td rowspan="2">Hindi</td> <td>English</td> <td>Maths</td> <td>Gym</td>
+</tr>
+<tr>
+  <th>Thursday</th> <td>English</td> <td>Maths</td> <td>Gym</td>
+</tr>
+</table>
+<table>
+  <thead>
+
+    <tr>
+
+    <th>Date</th> <th>Income</th> <th>Expenditure</th> </tr>
+  </thead>
+  <tbody>
+    <tr> <th>1st January</th> <td>500</td> <td>250</td> </tr>
+    <tr>
+      <th>2nd January</th> <td>480</td> <td>300</td>
+    </tr>
+    <tr>
+      <th>3rd January</th> <td>290</td> <td> 200</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <td></td> <td>1300</td>  <td>900</td>
+  </tfoot>
+</table>
+<table>
+<thead>
+<tr>
+<th>Date</th>
+<th>Income</th>
+<th>Expenditure</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<th>1st January</th>
+<td>250</td>
+<td>36</td>
+</tr>
+<tr>
+<th>2nd January</th>
+<td>285</td>
+<td>48</td>
+</tr>
+<th>31st January</th>
+<td>129</td>
+<td>64</td>
+</tr>
+</tbody>
+<tfoot>
+<tr>
+<td></td>
+<td>7824</td>
+<td>1241</td>
+</tr>
+</tfoot>
+</table>
+<table border="2" bgcolor="#efefef">
+<tr>
+<th width="150"></th>
+<th>Withdrawn</th>
+<th>Credit</th>
+<th width="150" bgcolor="#cccccc">Balance</th>
+</tr>
+<tr>
+<th>January</th>
+<td>250.00</td>
+<td>660.50</td>
+<td bgcolor="#cccccc">410.50</td>
+</tr>
+<tr>
+<th>February</th>
+<td>135.55</td>
+<td>895.20</td>
+<td bgcolor="#cccccc">1170.15</td>
+</tr>
+</table>
+
+
+
+</body>
+</html>
   </body>
     </html>
