--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <Head> 
-        <h1>Hello World
+        <h1>Hello World</h1>
             <p>Hello world My name is Ashish Dubey</p>
-        </h1>
+        
     </Head>
 </body>
 </html>
