--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
             <p>Hello world My name is Ashish Dubey :)</p>
 
     </Head>
-    <a href="htmlexp/index.html">HTML Explained</a>
+    <a href="htmlexp/index.html">Amazon Links</a>
 </body>
 </html>
