--- a/htmlexp/index.html
+++ b/htmlexp/index.html
@@ -6,27 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=roy1x-21&language=en_IN&marketplace=amazon&region=IN&placement=B083Q6Q41G&asins=B083Q6Q41G&linkId=586a6260e8f6b1216bb35b14ffca2ae5&show_border=true&link_opens_in_new_window=true"></iframe>
 
 </head>
 <body>
-    <h3>How to link back to a folder</h3>
-    <p>So the first thing that I needed to do was to link back to the folder that 
-        contained my CSS styles file. 
-        So to link back to a holder you have to type ".//" to link back to a folder
-        <h3>abbr</h3>
-        <p></p>
-        <abbr title="Ashish Dubey">My name</abbr>
-        <p>So abbr creates a text which can be a given a value. So if you hover 
-            on the text you can see the hidden value, or in other word the meaning 
-            of the abbrevation
-        </p>
-        <acronym title="Ashish Dubey">My name</acronym>
-        <address></address>
-        <h1>Hello</h1>
-        <h1> Who is sudhanshu singh
-            <p>Sudhanshu singh is a very simple person</p>
-        </h1>
-    </p>dsad
-    
+
 </body>
 </html>
